--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,9 @@
   --callout-border-rgb: 172, 175, 176;
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
+
+  --door-height: 200px;
+  --door-width: 120px;
 }
 
 @media (prefers-color-scheme: dark) {
