--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,6 +15,7 @@
 .doorsContent {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
