--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -31,50 +31,66 @@
   background-color: #6832e6;
   border-radius: 7px 0 0 0;
   border: 1px solid #000;
+  font-size: 2rem;
+  padding: 1.5rem;
 }
 
 .selectNumber {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   background-color: #9c1bc3;
   border: 1px solid #000;
   border-radius: 0 7px 0 0;
+  padding: 2rem;
 }
 
-.selectNumber input {
+.selectNumber h3 {
+  font-size: 2rem;
+}
+
+.selectNumber h2 {
+  font-size: 2.5rem;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 7rem;
+}
+
+.buttonContainer button {
   width: 3rem;
-  font-size: 1rem;
-  margin-top: 1rem;
-  text-align: center;
-  padding: 0.5rem;
-  border-radius: 7px;
-  border: none;
-  background-color: #fff;
+  height: 2rem;
+  font-size: 1.5rem;
+  background-color: lightgray;
   color: #000;
+  border: none;
+  border-radius: 7px;
+  font-weight: bolder;
+  transition: 0.3s ease;
+}
+
+.buttonContainer button:hover {
+  cursor: pointer;
+  border-radius: 0px;
 }
 
 .filler {
-  background-color: #e64774;
+  background-color: #9c1bc3;
   border: 1px solid #000;
   border-radius: 0 0 0 7px;
 }
 
 .start {
-  background-color: #f7a468;
+  background-color: #6832e6;
   border: 1px solid #000;
   border-radius: 0 0 7px 0;
-}
-
-.start button {
-  width: 120px;
-  height: 40px;
-  border-radius: 7px;
-  border: none;
-  background-color: #6832e6;
-  font-size: 1rem;
   transition: 0.3s ease;
+  font-size: 2rem;
 }
 
-.start button:hover {
+.start:hover {
   cursor: pointer;
-  border-radius: 0px;
   background-color: #5a21e0;
 }
